# chiller

./: .gitignore  Makefile  README.md  chiller_api.yaml  fe-Dockerfile
.github/workflows/: _build_and_test.yml  api_build_image.yml  api_test_unit.yml  build_and_test.yml  build_api_image.yml  build_pkg.yml  chiller_build_image.yml  chiller_test_browser.yml  chiller_test_integration.yml  frontend_build_image.yml  frontend_test_unit.yml  pkg_build.yml  python-publish.yml  release_test.yml  tag_on_pr_close.yml  test  test_api_build_image.yml  test_chiller_test_browser.yml  test_chiller_test_integration.yml  (+5 more)
api/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
frontend/: Dockerfile  pyproject.toml  requirements.txt
frontend/browser_tests/: test_browser.py
frontend/chiller_frontend/: __init__.py  api.py  movies.py  user.py
frontend/chiller_frontend/templates/: base.html
frontend/chiller_frontend/templates/movies/: list.html
frontend/chiller_frontend/templates/user/: login.html
frontend/integration_tests/: conftest.py  test_movies.py  test_user.py
frontend/tests/: conftest.py  pytest.ini  test_factory.py  test_movies.py  test_user.py
helm/: kust.sh  kustomization_template.yaml
load/: Dockerfile  README.md  test_wac.py  wac_session.py
scripts/: api_gen_cmd  run_api  run_frontend  run_postgres  sdk_gen_cmd
sdk/: README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
sdk/chiller_api_client/: __init__.py  api_client.py  configuration.py  rest.py
sdk/chiller_api_client/api/: __init__.py  movies_api.py  user_api.py
sdk/chiller_api_client/models/: __init__.py  jwt.py  movie.py  movie_list.py  user.py
sdk/docs/: JWT.md  MoviesApi.md  User.md  UserApi.md
sdk/integration_test/: conftest.py  test_movies.py  test_user.py
sdk/test/: test_movie_list.py  test_movies_api.py
(+84 files in other folders)
