[project]
name = "chiller_frontend"
version = "0.0.1"
description = "Watch and Chill front-end"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Lagomorph Labs", email = "jonathan@manton.com"}]
dependencies = [
    "flask",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "chiller_frontend"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flaskr", "tests"]

[tool.ruff]
src = ["src"]
