[project]
name = "chiller_api_client"
version = "0.0.1"
dependencies = [
    "certifi >= 14.05.14",
    "six >= 1.10",
    "python_dateutil >= 2.5.3",
    "urllib3 >= 1.15.1",
    "pyjwt >= 2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/test", "/integration_tests"]
